# socket-exception

./: CMakeLists.txt  README
1-connection-refused/: CmakeLists.txt  client1.c
2-connection-timeout/: CmakeLists.txt  client2.c
3-1-connection-close/: CmakeLists.txt  client3-1.c  client3-2.c  client3-3.c  server3.c
4-socket-read-timeout/: CmakeLists.txt  client4.c
lib/: CmakeLists.txt  README  common.h  lib.c
test/: CmakeLists.txt  test.c
